# Course-Design-for-the-Fuel-Supply-Unit-Temperature-Control-System

./: README.md  record.csv  任务要求.md  设计说明书必备信息.md
app/: main.py  settings.json
app/.claude/: settings.local.json
app/core/: protocol.py  serial_manager.py  state.py
app/services/: logger.py  settings.py
app/ui/: main_window.py  widgets.py
assets/: style.qss
code/: CMakeLists.txt  README.md  STM32F407ZGTx_FLASH.ld  arm-gcc-toolchain.cmake  download  download.jlink  temperature.md
code/CORE/: core_cmFunc.h  startup_stm32f407xx.s
code/HARDWARE/ADC/: adc.c  adc.h
code/HARDWARE/DAC/: dac.c
code/HARDWARE/LCD/: FONT.H
code/SYSTEM/sys/: sys.c
code/SYSTEM/usart/: usart.c  usart.h
code/USER/: control_output.c  control_output.h  main.c  stm32f4xx_conf.h  temp_conversion.c  temp_conversion.h
code/docs/superpowers/plans/: 2026-03-18-lcd-industrial-panel.md
code/docs/superpowers/specs/: 2026-03-17-jlink-download-design.md
code/tests/: control_output_test.c  temp_conversion_test.c
docs/superpowers/plans/: 2026-03-19-course-project-docs-and-comments.md  2026-03-19-fixed-record-csv.md
docs/superpowers/specs/: 2026-03-19-fixed-record-csv-design.md
